ingress-nginx/ingress-nginx/test/nginx-test.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  namespace: test-ingress
spec:
  selector:
    matchLabels:
      app: nginx
  replicas: 1
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  # namespace: istio-system
  namespace: test-ingress
spec:
  selector:
    app: nginx
  ports:
  - name: http
    port: 80
    targetPort: 80

---
